--- a/theme.css
+++ b/theme.css
@@ -17,7 +17,7 @@
     display: none !important;
 }
 
-.bar_c38106 {
+.bar_c38106 theme-dark theme-darker images-dark {
     display: none !important;
 }
 
