--- a/theme.css
+++ b/theme.css
@@ -21,6 +21,10 @@
     display: none !important;
 }
 
+.trailing_c38106 {
+    display: none !important;
+}
+
 .subtitleContainer_f75fb0 .toolbar__9293f {
     display: flex;
     margin-left: auto !important;
