--- a/theme.css
+++ b/theme.css
@@ -21,6 +21,10 @@
     display: none !important;
 }
 
+.bar_c38106 {
+    display: none !important;
+}
+
 .trailing_c38106 {
     display: none !important;
 }
