--- a/theme.css
+++ b/theme.css
@@ -93,3 +93,11 @@ a[href="https://discord.com/settings/premium"] img[src="https://cdn.discordapp.c
         margin: inherit;
     }
 }
+
+.wrapper__44b0c svg.mask__44b0c foreignObject {
+    transform: translateX(1px);
+}
+
+div[class*="wrapper_"] > svg > circle {
+    display: none;
+}
